--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "next": "13.1.1",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0"
